Fixed env variable whitespace

--- a/app/invocation/invocation.css
+++ b/app/invocation/invocation.css
@@ -437,6 +437,11 @@
   opacity: 0.7;
 }
 
+.env-detail {
+  font-weight: 300;
+  color: #444;
+}
+
 .prop-name {
   color: #222;
   font-weight: 600;
